add: variable .env

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ DB_PORT = puerto de la base de datos
 
 PORT = puerto de la aplicación
 HOST_API = parte fija de la api (localhost, dominio...)
+
+JWT_SECRET = clave secreta para el token
