--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,6 @@ PORT = puerto de la aplicación
 HOST_API = parte fija de la api (localhost, dominio...)
 
 JWT_SECRET = clave secreta para el token
+
+STRIPE_SECRET_KEY = clave secreta de stipe
+STRIPE_WEBHOOK_SECRET = clave del webhook de stripe este se usa para ver el estado del pedido
