add / refactor:  add service email, init password reset, change name entity User

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,7 @@ JWT_SECRET = clave secreta para el token
 
 STRIPE_SECRET_KEY = clave secreta de stipe
 STRIPE_WEBHOOK_SECRET = clave del webhook de stripe este se usa para ver el estado del pedido
+
+MAILER_SERVICE = servicio de mensajería que vas ha utilizar ej: Gmail
+MAILER_EMAIL = correo desde donde se enviaran los correos
+MAILER_SECRET_KEY = clave secreta para acceder al correo seleccionado
