add: template email, reset and forgot password

--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,7 @@ DB_PORT = puerto de la base de datos
 
 PORT = puerto de la aplicación
 HOST_API = parte fija de la api (localhost, dominio...)
+HOST_FRONT = parte fija del front
 
 JWT_SECRET = clave secreta para el token
 
